--- a/adatbazihf_adatprofilozas_JC5KSV.ipynb
+++ b/adatbazihf_adatprofilozas_JC5KSV.ipynb
@@ -56,7 +56,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 24,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -89,13 +88,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Legkorabbi_rendeles</th><th>Legkesobbi_rendeles</th><th>Legkorabbi_szallitas</th><th>Legkesobbi_szallitas</th><th>Egyedi_azonositok_szama</th></tr>",
-                            "<tr><td>2015-05-01</td><td>2017-04-01</td><td>2015-05-03</td><td>2017-04-11</td><td>191</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Legkorabbi_rendeles</th><th>Legkesobbi_rendeles</th><th>Legkorabbi_szallitas</th><th>Legkesobbi_szallitas</th><th>Egyedi_azonositok_szama</th></tr><tr><td>2015-05-01</td><td>2017-04-01</td><td>2015-05-03</td><td>2017-04-11</td><td>191</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 24
@@ -150,7 +145,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 25,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -185,15 +179,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Vizsgalt_oszlopok</th><th>Osszes_sor</th><th>Nullak_szama</th></tr>",
-                            "<tr><td>LOGIN</td><td>28085</td><td>0</td></tr>",
-                            "<tr><td>SZALL_CIM</td><td>28085</td><td>21689</td></tr>",
-                            "<tr><td>SZAMLA_CIM</td><td>28085</td><td>25535</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Vizsgalt_oszlopok</th><th>Osszes_sor</th><th>Nullak_szama</th></tr><tr><td>LOGIN</td><td>28085</td><td>0</td></tr><tr><td>SZALL_CIM</td><td>28085</td><td>21689</td></tr><tr><td>SZAMLA_CIM</td><td>28085</td><td>25535</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 25
@@ -241,7 +229,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 26,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -381,36 +368,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>ev</th><th>honap</th><th>rendelesek_szama</th></tr>",
-                            "<tr><td>2015</td><td>5</td><td>1203</td></tr>",
-                            "<tr><td>2015</td><td>6</td><td>1155</td></tr>",
-                            "<tr><td>2015</td><td>7</td><td>1235</td></tr>",
-                            "<tr><td>2015</td><td>8</td><td>1276</td></tr>",
-                            "<tr><td>2015</td><td>9</td><td>1207</td></tr>",
-                            "<tr><td>2015</td><td>10</td><td>1233</td></tr>",
-                            "<tr><td>2015</td><td>11</td><td>1178</td></tr>",
-                            "<tr><td>2015</td><td>12</td><td>1260</td></tr>",
-                            "<tr><td>2016</td><td>1</td><td>1226</td></tr>",
-                            "<tr><td>2016</td><td>2</td><td>1193</td></tr>",
-                            "<tr><td>2016</td><td>3</td><td>1274</td></tr>",
-                            "<tr><td>2016</td><td>4</td><td>1259</td></tr>",
-                            "<tr><td>2016</td><td>5</td><td>1218</td></tr>",
-                            "<tr><td>2016</td><td>6</td><td>1214</td></tr>",
-                            "<tr><td>2016</td><td>7</td><td>1209</td></tr>",
-                            "<tr><td>2016</td><td>8</td><td>1274</td></tr>",
-                            "<tr><td>2016</td><td>9</td><td>1192</td></tr>",
-                            "<tr><td>2016</td><td>10</td><td>1277</td></tr>",
-                            "<tr><td>2016</td><td>11</td><td>1210</td></tr>",
-                            "<tr><td>2016</td><td>12</td><td>1227</td></tr>",
-                            "<tr><td>2017</td><td>1</td><td>1204</td></tr>",
-                            "<tr><td>2017</td><td>2</td><td>1081</td></tr>",
-                            "<tr><td>2017</td><td>3</td><td>1242</td></tr>",
-                            "<tr><td>2017</td><td>4</td><td>38</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>ev</th><th>honap</th><th>rendelesek_szama</th></tr><tr><td>2015</td><td>5</td><td>1203</td></tr><tr><td>2015</td><td>6</td><td>1155</td></tr><tr><td>2015</td><td>7</td><td>1235</td></tr><tr><td>2015</td><td>8</td><td>1276</td></tr><tr><td>2015</td><td>9</td><td>1207</td></tr><tr><td>2015</td><td>10</td><td>1233</td></tr><tr><td>2015</td><td>11</td><td>1178</td></tr><tr><td>2015</td><td>12</td><td>1260</td></tr><tr><td>2016</td><td>1</td><td>1226</td></tr><tr><td>2016</td><td>2</td><td>1193</td></tr><tr><td>2016</td><td>3</td><td>1274</td></tr><tr><td>2016</td><td>4</td><td>1259</td></tr><tr><td>2016</td><td>5</td><td>1218</td></tr><tr><td>2016</td><td>6</td><td>1214</td></tr><tr><td>2016</td><td>7</td><td>1209</td></tr><tr><td>2016</td><td>8</td><td>1274</td></tr><tr><td>2016</td><td>9</td><td>1192</td></tr><tr><td>2016</td><td>10</td><td>1277</td></tr><tr><td>2016</td><td>11</td><td>1210</td></tr><tr><td>2016</td><td>12</td><td>1227</td></tr><tr><td>2017</td><td>1</td><td>1204</td></tr><tr><td>2017</td><td>2</td><td>1081</td></tr><tr><td>2017</td><td>3</td><td>1242</td></tr><tr><td>2017</td><td>4</td><td>38</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 26
@@ -456,7 +416,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 27,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -533,27 +492,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>rendelesi_nap</th><th>rendelesek_szama</th></tr>",
-                            "<tr><td>2015-12-02</td><td>52</td></tr>",
-                            "<tr><td>2015-08-05</td><td>50</td></tr>",
-                            "<tr><td>2016-04-19</td><td>50</td></tr>",
-                            "<tr><td>2016-05-07</td><td>50</td></tr>",
-                            "<tr><td>2015-07-26</td><td>50</td></tr>",
-                            "<tr><td>2016-11-25</td><td>49</td></tr>",
-                            "<tr><td>2015-09-11</td><td>49</td></tr>",
-                            "<tr><td>2015-11-30</td><td>49</td></tr>",
-                            "<tr><td>2015-10-10</td><td>49</td></tr>",
-                            "<tr><td>2016-04-02</td><td>49</td></tr>",
-                            "<tr><td>2015-07-28</td><td>49</td></tr>",
-                            "<tr><td>2016-10-11</td><td>49</td></tr>",
-                            "<tr><td>2015-12-30</td><td>49</td></tr>",
-                            "<tr><td>2016-10-09</td><td>49</td></tr>",
-                            "<tr><td>2015-08-20</td><td>48</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>rendelesi_nap</th><th>rendelesek_szama</th></tr><tr><td>2015-12-02</td><td>52</td></tr><tr><td>2015-08-05</td><td>50</td></tr><tr><td>2016-04-19</td><td>50</td></tr><tr><td>2016-05-07</td><td>50</td></tr><tr><td>2015-07-26</td><td>50</td></tr><tr><td>2016-11-25</td><td>49</td></tr><tr><td>2015-09-11</td><td>49</td></tr><tr><td>2015-11-30</td><td>49</td></tr><tr><td>2015-10-10</td><td>49</td></tr><tr><td>2016-04-02</td><td>49</td></tr><tr><td>2015-07-28</td><td>49</td></tr><tr><td>2016-10-11</td><td>49</td></tr><tr><td>2015-12-30</td><td>49</td></tr><tr><td>2016-10-09</td><td>49</td></tr><tr><td>2015-08-20</td><td>48</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 27
@@ -612,7 +553,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 28,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -647,28 +587,12 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>szallitas_mod</th><th>darabszam</th><th>szazalekos_megoszlas</th></tr>",
-                            "<tr><td>Személyes átvétel</td><td>9468</td><td>33.71</td></tr>",
-                            "<tr><td>GLS</td><td>9426</td><td>33.56</td></tr>",
-                            "<tr><td>Posta</td><td>9191</td><td>32.73</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>szallitas_mod</th><th>darabszam</th><th>szazalekos_megoszlas</th></tr><tr><td>Személyes átvétel</td><td>9468</td><td>33.71</td></tr><tr><td>GLS</td><td>9426</td><td>33.56</td></tr><tr><td>Posta</td><td>9191</td><td>32.73</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 28
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# ![Kimeneti kép](https://files.oaiusercontent.com/file-T9oVXTi16ympLqfEitgv3R?se=2025-03-21T18%3A24%3A58Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D299%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D732d933a-762e-4733-8a04-5f050a99c21f&sig=Mwydh93U0KvsHVUdzbes7MssQOwdJIibPXkgaXdykfY%3D)"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "16254b2f-f443-422e-8360-f010f708e4b0"
-            },
-            "attachments": {}
         }
     ]
 }
